--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <style>
-        body, html {
+        body,
+        html {
             margin: 0;
             padding: 0;
             overflow: hidden;
             height: 100%;
             width: 100%;
         }
+
         canvas {
             display: block;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
+
 <body>
-    <canvas id="mainCanvas"></canvas>
-    <script src="client.js"></script>
+    <script type="module" src="src/main"></script>
 </body>
+
 </html>
