--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <script type="module" src="src/main"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
